--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,7 @@ jobs:
           node-version: '20.x'
           registry-url: https://npm.pkg.github.com/
       - run: echo "//npm.pkg.github.com/:_authToken=\${{ secrets.NPM_TOKEN }}" > ~/.npmrc
+      - run: cat ~/.npmrc
       - run: npm ci
       - run: npm run build
       - run: npm run test
