--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
           node-version: '20.x'
           registry-url: https://npm.pkg.github.com/
       - run: |
-          echo "//npm.pkg.github.com/:_authToken=$NPM_TOKEN" > .npmrc && \
+          echo "//npm.pkg.github.com/:_authToken=${{ secrets.NPM_TOKEN }}" > .npmrc && \
           echo "@zimoykin:registry=https://npm.pkg.github.com" >> .npmrc && \
           npm ci &&  \
           rm -rf .npmrc
