--- a/package.json
+++ b/package.json
@@ -48,6 +48,9 @@
     "luxon": "^3.5.0",
     "mongoose": "^6.8.3",
     "multer": "^1.4.5-lts.1",
+    "nestjs-pino": "^4.1.0",
+    "pino": "^9.5.0",
+    "pino-pretty": "^11.3.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
